--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Dental AI</title>
+  <title>SmileMatrix AI</title>
 
   <!-- Bootstrap 5 -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -76,9 +76,12 @@
 
   <!-- HERO -->
   <section class="hero">
-    <h1 class="hero-title">Dental AI</h1>
-    <p class="hero-subtitle">Transforming dentistry with intelligent automation.</p>
+    <h1 class="hero-title">SmileMatrix AI</h1>
+    <p class="hero-subtitle">Automatic AI-based dental design for next-generation dentistry.</p>
     <a href="#contact" class="btn btn-primary btn-brand">Contact Us</a>
+    <p class="mt-3 text-muted small">
+      Our team consists of top DDS dentists and leading AI & optimization experts.
+    </p>
   </section>
 
   <!-- FEATURES -->
@@ -87,24 +90,24 @@
       <div class="col-12 col-md-4">
         <div class="feature-box">
           <div>🦷</div>
-          <div class="feature-title">AI Diagnostics</div>
-          <div class="feature-text">Instant radiograph insights.</div>
+          <div class="feature-title">AI Dental Design</div>
+          <div class="feature-text">Fully automated crowns, veneers, bridges, and restorations.</div>
         </div>
       </div>
 
       <div class="col-12 col-md-4">
         <div class="feature-box">
           <div>⚡</div>
-          <div class="feature-title">Faster Workflow</div>
-          <div class="feature-text">Save time at every visit.</div>
+          <div class="feature-title">Fast & Efficient</div>
+          <div class="feature-text">Designs generated in seconds, not hours.</div>
         </div>
       </div>
 
       <div class="col-12 col-md-4">
         <div class="feature-box">
-          <div>📈</div>
-          <div class="feature-title">Better Outcomes</div>
-          <div class="feature-text">Clarity for dentists and patients.</div>
+          <div>📐</div>
+          <div class="feature-title">Precision Quality</div>
+          <div class="feature-text">Consistent, accurate, and clinically aligned output.</div>
         </div>
       </div>
     </div>
@@ -113,14 +116,14 @@
   <!-- CONTACT -->
   <section id="contact" class="container mt-4">
     <div class="text-center">
-      <a href="mailto:info@yourdentalai.com" class="btn btn-outline-primary btn-brand">
-        Email: info@yourdentalai.com
+      <a href="mailto:info@smilematrix.ai" class="btn btn-outline-primary btn-brand">
+        Email: info@smilematrix.ai
       </a>
     </div>
   </section>
 
   <footer class="mt-4">
-    © <span id="year"></span> Dental AI
+    © <span id="year"></span> SmileMatrix AI · smilematrix.ai
   </footer>
 
   <script>
@@ -129,4 +132,3 @@
 
 </body>
 </html>
-
