--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
   <!-- CONTACT -->
   <section id="contact" class="container mt-4">
     <div class="text-center">
-      <a href="mailto:info@smilematrix.ai" class="btn btn-outline-primary btn-brand">
-        Email: info@smilematrix.ai
+      <a href="mailto:smilematrixai@gmail.com" class="btn btn-outline-primary btn-brand">
+        Email: smilematrixai@gmail.com
       </a>
     </div>
   </section>
