--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
   <div class="modal-dialog">
     <div class="modal-content p-3">
       <h5 class="mb-2" id="contactModalLabel">Send a Message</h5>
-      <form action="https://formsubmit.co/smilematrixai@gmail.com" method="POST">
+      <form action="https://formsubmit.co/85d5ae1476a3603286a55588f4ba6fb2" method="POST">
         <!-- FormSubmit options -->
         <input type="hidden" name="_captcha" value="false">
         <input type="hidden" name="_template" value="table">
