--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
         <!-- FormSubmit options -->
         <input type="hidden" name="_captcha" value="false">
         <input type="hidden" name="_template" value="table">
+        <input type="hidden" name="_redirect" value="false">
         <!-- optional: redirect after submit -->
         <!-- <input type="hidden" name="_next" value="https://smilematrix.ai/thank-you.html"> -->
 
