--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@ $(function() {
     class="btn btn-primary btn-brand"
     data-bs-toggle="modal"
     data-bs-target="#contactModal">
-    Contact Us
+    Book a Demo
   </button>
 
   <p class="mt-3 text-muted small">
