--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@ $(function() {
 <div class="modal fade" id="contactModal" tabindex="-1" aria-labelledby="contactModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content p-3">
-      <h5 class="mb-2" id="contactModalLabel">Send a Message</h5>
+      <h5 class="mb-2" id="contactModalLabel">Book a Demo</h5>
      <!--
       <form action="https://formsubmit.co/85d5ae1476a3603286a55588f4ba6fb2" method="POST">
         
