--- a/index.html
+++ b/index.html
@@ -233,23 +233,23 @@ $(function() {
       <div class="feature-box">
         <div>🦷</div>
         <div class="feature-title">AI Dental Design</div>
-        <div class="feature-text">Fully automated crowns, veneers, bridges, and restorations.</div>
+        <div class="feature-text">Fully Automated Digital Wax up for Cosmetic Smile Design.</div>
       </div>
     </div>
 
     <div class="col-12 col-md-4">
       <div class="feature-box">
         <div>⚡</div>
-        <div class="feature-title">Fast &amp; Efficient</div>
-        <div class="feature-text">Designs generated in seconds, not hours.</div>
+        <div class="feature-title">Exceptionally Fast</div>
+        <div class="feature-text">The quickest way to get a digital smile design—generated in seconds.</div>
       </div>
     </div>
 
     <div class="col-12 col-md-4">
       <div class="feature-box">
         <div>📐</div>
-        <div class="feature-title">Precision Quality</div>
-        <div class="feature-text">Consistent, accurate, and clinically aligned output.</div>
+        <div class="feature-title">Precision. Consistency. Ultra-Natural Aesthetics.</div>
+        <div class="feature-text">Reliable wax-ups that replicate natural tooth form and remove subjective interpretation.</div>
       </div>
     </div>
   </div>
